2010-11-06  Robert Larice
 * src/frontend/inpcom.c :
    drop a redundant check

2010-11-06  Robert Larice
 * src/spicelib/parser/inp2dot.c ,
 * src/spicelib/parser/inppas3.c :
    tiny rewrite, don't invoke strlen() to check for strlen() == 1

2010-11-06  Robert Larice
 * src/xspice/idn/idndig.c :
    change a (int) cast application, to avoid type conversion warnings

2010-11-06  Robert Larice
 * src/frontend/help/readhelp.c :
    tiny rewrite, to avoid type conversion warnings

2010-11-06  Robert Larice
 * src/frontend/parser/lexical.c :
    minor rewrite, a local variable type change

2010-11-06  Robert Larice
 * src/frontend/evaluate.c :
    tiny rewrite to avoid "variable ... might be clobbered by 'longjmp'" warnings

2010-11-06  Robert Larice
 * src/frontend/plotting/agraf.c ,
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/grid.c ,
 * src/misc/dstring.c ,
 * src/spicelib/parser/inp2r.c ,
 * src/spicelib/parser/inpgmod.c :
    (int) cast the return value of some strlen() invocations

2010-11-06  Robert Larice
 * src/frontend/subckt.c ,
 * src/spicelib/parser/inppas2.c :
    minor rewrite, avoid type conversion warnings

2010-11-06  Robert Larice
 * src/spicelib/devices/bsim1/b1.c ,
 * src/spicelib/devices/bsim1/b1dset.c ,
 * src/spicelib/devices/bsim1/b1eval.c ,
 * src/spicelib/devices/bsim1/b1mpar.c ,
 * src/spicelib/devices/bsim1/bsim1def.h :
    change the bsim1 `xpart' model parameter from IF_REAL to IF_FLAG
      which has been used internaly as boolean anyway.

2010-11-06  Robert Larice
 * src/spicelib/devices/nbjt/nbjt.c ,
 * src/spicelib/devices/nbjt/nbjtparm.c ,
 * src/spicelib/devices/nbjt2/nbt2.c ,
 * src/spicelib/devices/nbjt2/nbt2parm.c ,
 * src/spicelib/devices/numd/numd.c ,
 * src/spicelib/devices/numd/numdparm.c ,
 * src/spicelib/devices/numd2/nud2.c ,
 * src/spicelib/devices/numd2/nud2parm.c ,
 * src/spicelib/devices/numos/numm.c ,
 * src/spicelib/devices/numos/nummparm.c ,
 * src/spicelib/devices/urc/urc.c ,