@@ -1,4 +1,8 @@
 2010-11-06  Robert Larice
+ * src/frontend/parser/input.c :
+    tiny rewrite, type fixes
+
+2010-11-06  Robert Larice
  * src/frontend/inpcom.c :
     drop a redundant check
 
